# randcrypt

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
SUBPROJECT/: CMakeLists.txt  main.cpp
src/: randcrypt.cpp  randcrypt.cpp~  randcrypt.hpp  randcrypt0.cpp
t/: CMakeLists.txt  main.cpp  tests.cpp
t/cases/: randcryptUnitTests.cpp
